--- a/css/style.scss
+++ b/css/style.scss
@@ -329,6 +329,14 @@ html{
                         .retraining__title{
                             font-size: 36px;
                             line-height: 44px;
+                            @media screen and (max-width:850){
+                                font-size:24px;
+                                line-height:29px;
+                            }
+                            @media screen and (max-width:500px) {
+                                font-size:22px;
+                                line-height:25px;
+                            }
                         }
                     }
                 }
@@ -384,35 +392,49 @@ html{
                     }
                     .col-md-6{
                         .teaching__item{
+                            background:white;
                             .teaching__pic{
                                 background: #ECF1F7;
                                 max-width:100%;
-                                height:100%;
+                                max-height:100%;
+                                @media screen and (max-width:500px) {
+                                    max-width:40%;
+                                }
                             }
-                            .teaching__info{
-                                padding:37px 20% 18px 24px;
-                                background:white;
-                                .teaching__name{
-                                    font-weight: 500;
-                                    font-size: 18px;
-                                    line-height: 22px;
-                                    margin-bottom:25px;
+                            .teaching__name{
+                                font-weight: 500;
+                                font-size: 18px;
+                                line-height: 22px;
+                                margin-bottom:25px;
+                                @media screen and (max-width:850px) {
+                                    font-size:14px;
+                                    line-height:18px;
                                 }
-                                .teaching__text{
-                                    min-width:200px;
-                                    font-weight: 500;
-                                    font-size: 16px;
-                                    line-height: 19px;
-                                    color: #A5A5A5;
-                                    margin-bottom:34px;
+                            }
+                            .teaching__text{ 
+                                font-weight: 500;
+                                font-size: 16px;
+                                line-height: 19px;
+                                color: #A5A5A5;
+                                margin-bottom:34px;
+                                @media screen and (max-width:850px) {
+                                    font-size:14px;
+                                    line-height:18px;
                                 }
-                                .teaching__more{
-                                    font-size: 16px;
-                                    line-height: 19px;
-                                    color: #336FEE;
-                                    border:0px;
-                                    border-radius:5px;
-                                    padding:13px 19px;
+                                @media screen and (max-width:850px) {
+
+                                }
+                            }
+                            .teaching__more{
+                                font-size: 16px;
+                                line-height: 19px;
+                                color: #336FEE;
+                                border:0px;
+                                border-radius:5px;
+                                padding:13px 19px;
+                                @media screen and (max-width:850px) {
+                                    font-size:14px;
+                                    line-height:18px;
                                 }
                             }
                         }
