--- a/css/style.css
+++ b/css/style.css
@@ -614,13 +614,29 @@ html body .trust {
   padding-bottom: 120px;
 }
 
-html body .trust .container .row .col {
+html body .trust .container .row .trust__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-html body .trust .container .row .col .trust__img {
+@media screen and (max-width: 950px) {
+  html body .trust .container .row .trust__wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  html body .trust .container .row .trust__wrapper .trust__item {
+    width: 45%;
+  }
+}
+
+html body .trust .container .row .trust__wrapper .trust__item .trust__img {
   max-width: 100%;
 }
 
